# rust_leaning

./: .gitignore
agrothim/enhanced_todo_cli/: Cargo.toml  README.md  docker-compose.yml
agrothim/enhanced_todo_cli/.todo-cli/: session.json
agrothim/enhanced_todo_cli/migrations/: 20250827040848_initial_schema.sql
agrothim/enhanced_todo_cli/src/: lib.rs  main.rs
agrothim/enhanced_todo_cli/src/cli/: args.rs  commands.rs
agrothim/enhanced_todo_cli/src/database/: connection.rs  mod.rs
agrothim/enhanced_todo_cli/src/database/repositories/: mod.rs  task_repository.rs  user_repository.rs
agrothim/enhanced_todo_cli/src/models/: mod.rs  task.rs  user.rs
agrothim/enhanced_todo_cli/src/services/: auth_service.rs  mod.rs  task_service.rs  user_service.rs
agrothim/enhanced_todo_cli/src/utils/: config.rs  formatting.rs  mod.rs
agrothim/enhanced_todo_cli/tasks/: summary.md  task1.md  task2.md
agrothim/enhanced_todo_cli/tests/: task_repository_tests.rs  user_repository_tests.rs
guessing_name/: Cargo.toml
guessing_name/src/: main.rs
hello_rust/src/: main.rs  main_date1.rs
